--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Your Name | Personal Website</title>
+  <title> Lily Tan | Personal Website</title>
   <style>
     body {
       font-family: 'Helvetica Neue', sans-serif;
@@ -58,8 +58,8 @@
 
   <header>
     <h1>Your Name</h1>
-    <p>Aspiring [Your Future Role, e.g., Web Developer, Data Analyst, Designer]</p>
-    <p>Passionate about [your main skill or passion, e.g., building user-friendly websites]</p>
+    <p>Aspiring Web Developer/Designer </p>
+    <p>Passionate about website development, animation, and story telling in any forms</p>
   </header>
 
   <nav>
