--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
 
   <header>
-    <h1>Your Name</h1>
+    <h1>Lily Tan </h1>
     <p>Aspiring Web Developer/Designer </p>
     <p>Passionate about website development, animation, and story telling in any forms</p>
   </header>
