--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </nav>
 
   <footer>
-    &copy; 2025 Your Name. All rights reserved.
+    &copy; 2025 lily tan. All rights reserved.
   </footer>
 
 </body>
