--- a/index.html
+++ b/index.html
@@ -2,76 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> Lily Tan | Personal Website</title>
-  <style>
-    body {
-      font-family: 'Helvetica Neue', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f5f7fa;
-      color: #333;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
-      justify-content: center;
-      text-align: center;
-    }
-    header {
-      margin-bottom: 20px;
-    }
-    h1 {
-      font-size: 48px;
-      margin: 0;
-    }
-    p {
-      font-size: 20px;
-      margin-top: 10px;
-      color: #666;
-    }
-    nav {
-      margin-top: 30px;
-    }
-    nav a {
-      text-decoration: none;
-      color: #4CAF50;
-      font-size: 18px;
-      margin: 0 15px;
-      border: 2px solid #4CAF50;
-      padding: 10px 20px;
-      border-radius: 8px;
-      transition: all 0.3s ease;
-    }
-    nav a:hover {
-      background-color: #4CAF50;
-      color: white;
-    }
-    footer {
-      margin-top: 50px;
-      font-size: 14px;
-      color: #aaa;
-    }
-  </style>
+  <title>My Folding Homepage</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <header>
-    <h1>Lily Tan </h1>
-    <p>Aspiring Web Developer/Designer </p>
-    <p>Passionate about website development, animation, and story telling in any forms</p>
-  </header>
-
-  <nav>
-    <a href="about.html">About Me</a>
-    <a href="projects.html">Projects</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-
-  <footer>
-    &copy; 2025 lily tan. All rights reserved.
-  </footer>
-
+  <section class="homepage">
+    <div class="folding-card">
+      <div class="card-front">
+        <h1>Hello, I'm Nora</h1>
+        <p>Hover to unfold my story 👇</p>
+      </div>
+      <div class="card-back">
+        <h2>Administrative Assistant</h2>
+        <p>I specialize in keeping things running smoothly — from calendar coordination to office communication and task management.</p>
+        <a href="#contact">Let's connect →</a>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
-
