--- a/index.html
+++ b/index.html
@@ -2,22 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Folding Homepage</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome to My Page</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section class="homepage">
-    <div class="folding-card">
-      <div class="card-front">
-        <h1>Hello, I'm Nora</h1>
-        <p>Hover to unfold my story 👇</p>
-      </div>
-      <div class="card-back">
-        <h2>Administrative Assistant</h2>
-        <p>I specialize in keeping things running smoothly — from calendar coordination to office communication and task management.</p>
-        <a href="#contact">Let's connect →</a>
-      </div>
+  <div class="envelope">
+    <div class="flap"></div>
+    <div class="letter">
+      <h1>Hello, I'm Nora</h1>
+      <p>Welcome to my personal website. I'm an administrative assistant who loves structure, clarity, and communication. Let's unfold my story together.</p>
+      <a href="#about">Read More</a>
     </div>
-  </section>
+  </div>
 </body>
 </html>
